[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = "My Awesome Lists"
license = "MIT"
name = "awesome"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = { extras = ["socks"], version = "^0.26.0" }
mkdocs = "^1.5.3"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-git-committers-plugin-2 = "^2.2.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.2"
mkdocs-material = "^9.5.8"
pandas = "^2.2.0"
pydantic = "^2.6.1"
pymdown-extensions = "^10.7"
python = "^3.11"
pyyaml = "^6.0.1"
tenacity = "^8.2.3"
typer = { extras = ["all"], version = "^0.9.0" }
urltitle = "^0.3.8"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
poetry = "^1.7.1"

[tool.poetry.scripts]
awesome = "awesome.cli.main:app"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
