[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = "My Awesome Lists"
license = "MIT"
name = "awesome"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
fake-useragent = "^1.4.0"
httpx = { extras = ["socks"], version = "^0.26.0" }
loguru = "^0.7.2"
pydantic = "^2.6.1"
python = "^3.11"
pyyaml = "^6.0.1"
tenacity = "^8.2.3"
typeguard = "^4.1.5"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
mypy = "^1.8.0"
poetry = "^1.7.1"
poetry-plugin-export = "^1.6.0"
ruff = "^0.2.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocs-git-committers-plugin-2 = "^2.2.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-material = "^9.5.9"
pymdown-extensions = "^10.7"

[tool.poetry.scripts]
awesome = "awesome.cli.main:app"

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ASYNC",
  "B",
  "C4",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INT",
  "LOG",
  "NPY",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "TCH",
  "TID",
  "TRIO",
  "TRY",
  "UP",
  "W",
  "YTT",
]
